<resources>
    <string name="app_name">Bityard</string>
    <string name="tab_one">首页</string>
    <string name="tab_two">行情</string>
    <string name="tab_three">交易</string>
    <string name="tab_four">持仓</string>
    <string name="tab_five">资产</string>
    <string name="text_jump">跳过</string>
    <string name="text_register">注册</string>
    <string name="text_mobile_login">手机号码登录-></string>
    <string name="text_email_login">邮箱登录-></string>
    <string name="text_email">电子邮箱</string>
    <string name="text_email_input">请输入邮箱</string>
    <string name="text_input_pass">请输入密码</string>
    <string name="text_pass">登录密码</string>
    <string name="text_forget_pass">忘记密码</string>
    <string name="text_number">手机号码</string>
    <string name="text_input_number">请输入手机号</string>
    <string name="text_select">选择国家或地区</string>
    <string name="text_login">立即登录</string>
    <string name="text_register_title">注册Bityard</string>
    <string name="text_mobile_register">手机号码注册-></string>
    <string name="text_email_code">邮箱验证码</string>
    <string name="text_email_code_input">请输入邮箱验证码</string>
    <string name="text_mobile_code">短信验证码</string>
    <string name="text_mobile_code_input">请输入短信验证码</string>
    <string name="text_email_register">邮箱注册-></string>
    <string name="text_try">点击重试</string>
    <string name="text_register_success">注册成功!</string>
    <string name="text_err_tip">后端小哥在努力升级ing</string>
    <string name="text_code_lose">验证码错误或已过期</string>
    <string name="text_forget">找回密码</string>
    <string name="text_mobile_forget">手机号找回-></string>
    <string name="text_next">下一步</string>
    <string name="text_pass_new">新密码</string>
    <string name="text_edit_pass_new">请输入新密码</string>
    <string name="text_pass_new_sure">确认密码</string>
    <string name="text_edit_pass_new_sure">请再次输入新密码</string>
    <string name="text_sure">确认</string>
    <string name="text_email_forget"><![CDATA[邮箱找回->]]></string>
    <string name="text_recommend">推荐榜单</string>
    <string name="text_trade_bonus">赠金活动</string>
    <string name="text_trade_simulation">模拟交易</string>
    <string name="text_new_price">最新价</string>
    <string name="text_up_down">涨跌幅</string>
    <string name="text_name">名称</string>
    <string name="text_all_balance">总净资产(USDT)</string>
    <string name="text_mining">前往挖矿</string>
    <string name="text_fabi_trade">法币充值</string>
    <string name="text_coin_turn">闪兑</string>
    <string name="text_withdrawal">提币</string>
    <string name="text_recharge">充币</string>
    <string name="text_unlogin">请登录</string>
    <string name="text_setup">系统管理</string>
    <string name="text_logout">退出登录</string>
    <string name="text_theme">主题切换</string>
    <string name="text_rate">汇率</string>
    <string name="text_language">选择语言</string>
    <string name="text_theme_setup">主题设置</string>
    <string name="text_night">夜间模式</string>
    <string name="text_day">日间模式</string>
    <string name="text_english">English</string>
    <string name="text_chinese">简体中文</string>
    <string name="text_chinese_second">Chinese,Simplified</string>
    <string name="text_traditional">繁體中文</string>
    <string name="text_traditional_second">Chinese,Traditional</string>
    <string name="text_japan">日本語</string>
    <string name="text_japan_second">Japanese</string>
    <string name="text_korean">한국어</string>
    <string name="text_korean_second">Korean</string>
    <string name="text_real">实盘</string>
    <string name="text_simulation">模拟</string>
    <string name="text_available">可用</string>
    <string name="text_freeze">占用</string>
    <string name="text_worth">账户净值</string>
    <string name="text_open">持仓</string>
    <string name="text_order">挂单</string>
    <string name="text_history">历史</string>
    <string name="text_detail">查看详情</string>
    <string name="text_close_out_color">平仓</string>
    <string name="text_profit_loss">止盈止损</string>
    <string name="text_price">当前价</string>
    <string name="text_profit_price">止盈价</string>
    <string name="text_stoploss_price">止损价</string>
    <string name="text_total_profit_loss">总盈亏:</string>
    <string name="text_all_cloes">一键平仓</string>
    <string name="text_netincome">(净盈亏)</string>
    <string name="text_pending_text">挂单价</string>
    <string name="text_cancel">撤单</string>
    <string name="text_o_price">开仓价</string>
    <string name="text_close_price">平仓价</string>
    <string name="text_price_tab">价格</string>
    <string name="text_amount_tab">金额</string>
    <string name="text_cancel_position">取消</string>
    <string name="text_stop_profit_pop">止盈价:</string>
    <string name="text_stop_loss_pop">止损价:</string>
    <string name="text_loss_rate">亏损百分比:</string>
    <string name="text_profit_rate">盈利百分比:</string>
    <string name="text_profit_amount">盈利金额:</string>
    <string name="text_loss_amount">止损金额:</string>
    <string name="text_profit_forward">止盈</string>
    <string name="text_loss_forward">止损</string>
    <string name="text_success">成功</string>
    <string name="text_add_margin">追加保证金</string>
    <string name="text_available_add">可用:</string>
    <string name="text_margin">保证金</string>
    <string name="text_lever">杠杆</string>
    <string name="text_hand_fee">追加手续费</string>
    <string name="text_all">合计</string>
    <string name="text_add_coin">加币</string>
    <string name="text_buy_much">做多</string>
    <string name="text_buy_empty">做空</string>
    <string name="text_max">最高</string>
    <string name="text_default">0.00</string>
    <string name="text_min">最低</string>
    <string name="text_volume">24H</string>
    <string name="text_simulation_btn">切换模拟盘</string>
    <string name="text_real_trade">实盘</string>
    <string name="text_real_btn">切换实盘</string>
    <string name="text_simulation_trade">模拟</string>
    <string name="text_market_price">市价</string>
    <string name="text_limit_price">限价</string>
    <string name="text_market_price_edit">市价委托</string>
    <string name="text_margin_edit">保证金:</string>
    <string name="text_volume_edit">仓位:</string>
    <string name="text_market_price_input_edit">以市价买入</string>
    <string name="text_lever_edit">杠杆:</string>
    <string name="text_20x">20X</string>
    <string name="text_40x">40X</string>
    <string name="text_60x">60X</string>
    <string name="text_80x">80X</string>
    <string name="text_100x">100X</string>
    <string name="text_market_all">总计支付:</string>
    <string name="text_limit_price_edit">限价委托:</string>
    <string name="text_margin_input">请输入保证金</string>
    <string name="text_limit_price_input">请输入挂单价</string>
    <string name="text_trade_set">交易设置</string>
    <string name="text_stop_profit_rate">默认止盈比例</string>
    <string name="text_stop_loss_rate">默认止损比例</string>
    <string name="text_close_sure">平仓确认</string>
    <string name="text_order_sure">下单确认</string>
    <string name="text_defer_sure">持仓过夜</string>
    <string name="text_inall_pop">合计</string>
    <string name="text_service_pop">手续费</string>
    <string name="text_are_you_sure">是否确认平仓?</string>
    <string name="text_service_tip">手续费=保证金*杠杆*0.05%\n</string>
    <string name="text_tip_login">未登录</string>
    <string name="kline_open">开:</string>
    <string name="kline_max">高:</string>
    <string name="kline_min">低:</string>
    <string name="kline_close">收:</string>
    <string name="kline_time">时间</string>
    <string name="kline_open_detail">开</string>
    <string name="kline_max_detail">高</string>
    <string name="kline_min_detail">低</string>
    <string name="kline_close_detail">收</string>
    <string name="kline_rate_detail">涨跌额</string>
    <string name="kline_change_detail">涨跌幅</string>
    <string name="kline_volume_detail">成交量</string>
    <string name="text_rule">规则</string>
    <string name="text_1h">1时</string>
    <string name="text_1day">1天</string>
    <string name="text_1week">1周</string>
    <string name="text_1month">1月</string>
    <string name="text_lever_select">选择杠杆</string>
    <string name="text_my_service">在线客服</string>
    <string name="text_safe_center">安全中心</string>
    <string name="text_change">修改</string>
    <string name="text_pin">资金密码</string>
    <string name="text_not_set">未设置</string>
    <string name="text_mobile_set_up">手机号验证</string>
    <string name="text_unbond">未绑定</string>
    <string name="text_email_verification">邮箱验证</string>
    <string name="text_security_level">安全等级</string>
    <string name="text_change_login_pass">修改登录密码</string>
    <string name="text_old_pass">旧密码</string>
    <string name="text_old_pass_input">请输入旧密码</string>
    <string name="text_get_code">获取验证码</string>
    <string name="text_pass_different">两次输入的密码不一致</string>
    <string name="text_pin_set">设置资金密码</string>
    <string name="text_pin_pass">资金密码</string>
    <string name="text_login_pass_input">请输入登录密码</string>
    <string name="text_pin_change">修改资金密码</string>
    <string name="text_bind_mobile">绑定手机号</string>
    <string name="text_mobile_change">修改手机号</string>
    <string name="text_success_bind">绑定成功</string>
    <string name="text_correct_mobile_code">请输入正确短信验证码</string>
    <string name="text_change_success">修改成功</string>
    <string name="text_bind_email">绑定邮箱</string>
    <string name="text_change_email">修改邮箱</string>
    <string name="text_correct_email_code">请输入正确邮箱验证码</string>
    <string name="text_mid">中</string>
    <string name="text_low">低</string>
    <string name="text_high">高</string>
    <string name="text_account">资金账户</string>
    <string name="text_commission_rate">佣金比:</string>
    <string name="text_fund_statement">资金明细</string>
    <string name="text_orders">合约记录</string>
    <string name="text_affiliate_stats">邀请记录</string>
    <string name="text_trade_settings">交易设置</string>
    <string name="text_withdrawal_address">提币地址管理</string>
    <string name="text_system_settings">系统管理</string>
    <string name="text_announcements">最新公告</string>
    <string name="text_d_w">充提记录</string>
    <string name="text_transfer">转账记录</string>
    <string name="text_exchange">兑换记录</string>
    <string name="text_fiat">法币记录</string>
    <string name="text_today">本日</string>
    <string name="text_month">本月</string>
    <string name="text_week">本周</string>
    <string name="text_pending">待处理</string>
    <string name="text_tip_success">操作成功</string>
    <string name="text_failure">失败</string>
    <string name="text_tip_cancel">取消</string>
    <string name="text_processing">处理中</string>
    <string name="text_in_progress">汇款中</string>
    <string name="text_refunded">已退款</string>
    <string name="text_no_data">暂无数据</string>
    <string name="text_d_w_detail">充提明细</string>
    <string name="text_coin">币种</string>
    <string name="text_type">类型</string>
    <string name="text_amount">充/提数量</string>
    <string name="text_time">充/提时间</string>
    <string name="text_status">状态</string>
    <string name="text_trade_id">交易ID</string>
    <string name="text_important">温馨提示</string>
    <string name="text_usdt_address">提币地址</string>
    <string name="text_manage_address">地址管理</string>
    <string name="text_withdrawal_limit">提币限额</string>
    <string name="text_withdrawal_tip_one">单次提币不得低于%s</string>
    <string name="text_withdrawal_tip_two">每一次提币前，需要确保地址准确无误，错误地址会导致提币失败</string>
    <string name="text_login_title">登录</string>
    <string name="text_photo">拍照</string>
    <string name="text_album">相册</string>
    <string name="text_withdrawal_tip_three">单日提币限额为：%s</string>
    <string name="text_default_content">默认</string>
    <string name="text_show_sell">展示卖单</string>
    <string name="text_show_buy">展示买单</string>
    <string name="text_withdrawal_tip_four">请确认目标提币地址是否存在且被激活，否则将会导致提币失败，且资产不可找回</string>
    <string name="text_withdrawal_tip_five">如有地址标签，请务必仔细核对地址标签，否则将造成资产损失并不可找回</string>
    <string name="text_withdrawal_tip_six">为保障资金安全，当您账户安全策略变更、密码修改、我们会对提币进行人工审核，请耐心等待工作人员电话或邮件联系</string>
    <string name="text_withdrawal_tip_seven">请务必确认电脑及浏览器安全，防止信息被篡改或泄露</string>
    <string name="text_withdrawal_tip_eight">提币时间（SGT）：周一到周日的9:00-21:00</string>
</resources>