<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_main_color"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_default"
            android:layout_width="match_parent"
            android:layout_height="@dimen/bar_height"
            android:gravity="center"
            android:text="@string/text_default_content"
            android:textColor="@color/maincolor"
            android:textSize="15sp"

            />

        <include layout="@layout/layout_line" />
        <TextView
            android:id="@+id/text_show_sell"
            android:layout_width="match_parent"
            android:layout_height="@dimen/bar_height"
            android:gravity="center"
            android:text="@string/text_show_sell"
            android:textColor="@color/text_main_color"
            android:textSize="15sp"

            />

        <include layout="@layout/layout_line" />

        <TextView
            android:id="@+id/text_show_buy"
            android:layout_width="match_parent"
            android:layout_height="@dimen/bar_height"
            android:gravity="center"
            android:text="@string/text_show_buy"
            android:textColor="@color/text_main_color"
            android:textSize="15sp"

            />

        <include layout="@layout/layout_line_big" />

        <TextView
            android:id="@+id/text_cancel"
            android:layout_width="match_parent"
            android:layout_height="@dimen/bar_height"
            android:gravity="center"
            android:text="@string/text_cancel_position"
            android:textColor="@color/text_main_color"
            android:textSize="@dimen/size_big"

            />

    </LinearLayout>

</RelativeLayout>