<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_main_color"

    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layout_withdrawal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <include layout="@layout/bar_usdt" />

        <include layout="@layout/layout_line" />

        <include layout="@layout/bar_lian" />


        <include layout="@layout/layout_line" />

        <include layout="@layout/bar_amount" />

        <include layout="@layout/layout_line" />

        <LinearLayout
            android:id="@+id/layout_address"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_setup"
            android:orientation="horizontal">

            <com.pro.bityard.view.textview.ManropeTextView
                android:id="@+id/text_address"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/margin_15"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center|left"
                android:maxLines="2"
                android:text="@string/text_usdt_address"
                android:textColor="@color/text_second_color"
                android:textSize="@dimen/hint_size" />


            <com.pro.bityard.view.textview.ManropeTextView
                android:id="@+id/text_address_manage"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingLeft="@dimen/margin_15"
                android:paddingRight="@dimen/margin_15"
                android:text="@string/text_manage_address"
                android:textColor="@color/maincolor"
                android:textSize="@dimen/size_big" />


        </LinearLayout>

        <include layout="@layout/layout_line" />

        <include layout="@layout/bar_fund_pass" />

        <include layout="@layout/layout_line" />

        <include layout="@layout/bar_email_mobile_code" />

        <include layout="@layout/layout_line" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_setup"

            >

            <com.pro.bityard.view.textview.ManropeTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/margin_15"
                android:gravity="center"
                android:text="@string/text_withdrawal_limit"
                android:textColor="@color/text_main_color"
                android:textSize="@dimen/size_normal_two" />

            <com.pro.bityard.view.textview.ManropeTextView
                android:id="@+id/text_range"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/margin_15"
                android:gravity="center"
                android:text="10000 USDT"
                android:textColor="@color/text_second_color"
                android:textSize="@dimen/size_normal_two" />

        </RelativeLayout>

        <include layout="@layout/layout_line" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_setup"

            >

            <com.pro.bityard.view.textview.ManropeTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/margin_15"
                android:gravity="center"
                android:text="@string/text_service_pop"
                android:textColor="@color/text_main_color"
                android:textSize="@dimen/size_normal_two" />

            <com.pro.bityard.view.textview.ManropeTextView
                android:id="@+id/text_fee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/margin_15"
                android:gravity="center"
                android:text="2 USDT"
                android:textColor="@color/text_second_color"
                android:textSize="@dimen/size_normal_two" />

        </RelativeLayout>

        <include layout="@layout/layout_line" />
        <!--登录button-->
        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_btn"
            android:layout_marginLeft="@dimen/margin_15"
            android:layout_marginTop="@dimen/margin_15"
            android:layout_marginRight="@dimen/margin_15"
            android:layout_marginBottom="@dimen/margin_20"
            android:background="@drawable/sel_switcher_enabled_bg"
            android:enabled="false"
            android:padding="10dp"
            android:text="@string/text_sure"
            android:textColor="@color/color_btn_text"
            android:textSize="16sp"

            />


        <com.pro.bityard.view.textview.ManropeTextView
            android:id="@+id/text_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="@dimen/margin_15"
            android:text="最新提币记录"
            android:textColor="@color/text_quote_red"
            android:textSize="@dimen/size_normal_two"
            android:visibility="gone" />


        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_line_big"
            android:background="@color/home_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_15"
            android:layout_marginTop="@dimen/margin_15"
            android:layout_marginRight="@dimen/margin_15"
            android:layout_marginBottom="@dimen/margin_30"
            android:orientation="vertical">

            <com.pro.bityard.view.textview.ManropeTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_important"
                android:textColor="@color/text_main_color"
                android:textSize="@dimen/size_big" />

            <com.pro.bityard.view.textview.ManropeTextView
                android:id="@+id/text_withdrawal_tip_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:text="@string/text_withdrawal_tip_one"
                android:textColor="@color/text_second_color"
                android:textSize="@dimen/size_normal" />

            <com.pro.bityard.view.textview.ManropeTextView
                android:id="@+id/text_withdrawal_tip_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_withdrawal_tip_three"
                android:textColor="@color/text_second_color"
                android:textSize="@dimen/size_normal" />

            <com.pro.bityard.view.textview.ManropeTextView
                android:id="@+id/text_withdrawal_tip_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_withdrawal_tip_two"
                android:textColor="@color/text_second_color"
                android:textSize="@dimen/size_normal" />

            <com.pro.bityard.view.textview.ManropeTextView
                android:id="@+id/text_withdrawal_tip_four"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_withdrawal_tip_four"
                android:textColor="@color/text_second_color"
                android:textSize="@dimen/size_normal" />

            <com.pro.bityard.view.textview.ManropeTextView
                android:id="@+id/text_withdrawal_tip_five"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_withdrawal_tip_five"
                android:textColor="@color/text_second_color"
                android:textSize="@dimen/size_normal" />

            <com.pro.bityard.view.textview.ManropeTextView
                android:id="@+id/text_withdrawal_tip_six"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_withdrawal_tip_six"
                android:textColor="@color/text_second_color"
                android:textSize="@dimen/size_normal" />

            <com.pro.bityard.view.textview.ManropeTextView
                android:id="@+id/text_withdrawal_tip_seven"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_withdrawal_tip_seven"
                android:textColor="@color/text_second_color"
                android:textSize="@dimen/size_normal" />

            <com.pro.bityard.view.textview.ManropeTextView
                android:id="@+id/text_withdrawal_tip_eight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_withdrawal_tip_eight"
                android:textColor="@color/text_second_color"
                android:textSize="@dimen/size_normal" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>