<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/background_maincolor"
        android:orientation="vertical">


        <TextView
            android:id="@+id/text_camera"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:text="@string/text_photo"
            android:textColor="@color/text_main_color"
            android:textSize="15sp"

            />

        <include layout="@layout/layout_line" />

        <TextView
            android:id="@+id/text_album"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:text="@string/text_album"
            android:textColor="@color/text_main_color"
            android:textSize="15sp"

            />

        <include layout="@layout/layout_line_big" />

        <TextView
            android:id="@+id/text_cancel"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center"
            android:text="@string/text_cancel_position"
            android:textColor="@color/text_main_color"
            android:textSize="15sp"

            />

    </LinearLayout>

</RelativeLayout>