<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <include layout="@layout/layout_title" />


    <include layout="@layout/layout_mobile_code" />

    <!--手机号码-->
    <include layout="@layout/layout_mobile" />

    <!--密码-->
    <include layout="@layout/layout_pass" />

    <com.pro.bityard.view.textview.ManropeTextView
        android:id="@+id/text_forget_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_25"
        android:layout_marginRight="@dimen/margin_25"
        android:gravity="right"
        android:paddingBottom="@dimen/margin_10"
        android:text="@string/text_forget_pass"
        android:textColor="@color/text_main_color"
        android:textSize="@dimen/size_normal" />

    <!--登录button-->
    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_btn"
        android:layout_marginLeft="@dimen/margin_25"
        android:layout_marginTop="@dimen/margin_28"
        android:layout_marginRight="@dimen/margin_25"
        android:background="@drawable/sel_switcher_enabled_bg"
        android:enabled="false"
        android:padding="10dp"
        android:text="@string/text_login_title"
        android:textColor="@color/color_btn_text"
        android:textSize="16sp"

        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.pro.bityard.view.textview.ManropeTextView
            android:id="@+id/text_email_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_10"
            android:padding="@dimen/margin_15"
            android:text="@string/text_email_login"
            android:textColor="@color/text_main_color"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/margin_10"
            android:padding="@dimen/margin_15"
            android:text="@string/text_register"
            android:textColor="@color/maincolor"
            android:textSize="@dimen/size_big" />

    </RelativeLayout>
</LinearLayout>